[gd_scene load_steps=9 format=3 uid="uid://c8iqmnt4rvsw"]

[ext_resource type="PackedScene" uid="uid://c78uul6o2sa8g" path="res://characters/player.tscn" id="1_owcqv"]
[ext_resource type="Script" uid="uid://cb134dbplgi6t" path="res://scenes/dialogue_npc.gd" id="2_h81ti"]
[ext_resource type="Texture2D" uid="uid://dfoh53eo68eol" path="res://resources/FloorTiles_Hallway1.png" id="3_u7i40"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h81ti"]
size = Vector2(339, 527)

[sub_resource type="LabelSettings" id="LabelSettings_h81ti"]
font_size = 50

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owcqv"]
size = Vector2(654.5, 370)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3w3tr"]
texture = ExtResource("3_u7i40")
texture_region_size = Vector2i(62, 62)
16:0/0 = 0
17:1/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
18:1/size_in_atlas = Vector2i(2, 1)
18:1/0 = 0
16:2/size_in_atlas = Vector2i(2, 1)
16:2/0 = 0
16:1/0 = 0
18:2/0 = 0
19:2/0 = 0
19:3/0 = 0
18:3/0 = 0
17:3/0 = 0
16:3/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
11:1/0 = 0
10:1/0 = 0
9:1/0 = 0
8:1/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
11:3/0 = 0
9:3/0 = 0
10:3/0 = 0
8:3/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0

[sub_resource type="TileSet" id="TileSet_1k2v8"]
sources/0 = SubResource("TileSetAtlasSource_3w3tr")

[node name="Node2D" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_owcqv")]
position = Vector2(670, 2)

[node name="DialogueNPC" type="Node" parent="."]

[node name="Panel" type="Panel" parent="DialogueNPC"]
offset_left = -685.0
offset_top = -266.0
offset_right = -440.0
offset_bottom = 207.0

[node name="Area2D" type="Area2D" parent="DialogueNPC"]
script = ExtResource("2_h81ti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueNPC/Area2D"]
position = Vector2(-565.5, -54)
shape = SubResource("RectangleShape2D_h81ti")

[node name="DialogueBox" type="Panel" parent="DialogueNPC/Area2D"]
offset_left = -926.0
offset_top = -73.0
offset_right = -157.0
offset_bottom = 240.0

[node name="words" type="Label" parent="DialogueNPC/Area2D/DialogueBox"]
layout_mode = 0
offset_left = 2.0
offset_top = 113.0
offset_right = 758.0
offset_bottom = 182.0
text = "HHOI IM TEMMIE........ jk im bob"
label_settings = SubResource("LabelSettings_h81ti")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-406.25, 410)
shape = SubResource("RectangleShape2D_owcqv")

[node name="Panel" type="Panel" parent="StaticBody2D"]
offset_left = -729.0
offset_top = 216.0
offset_right = -66.0
offset_bottom = 601.0

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 14, 0, 26, 0, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_1k2v8")

[connection signal="area_entered" from="DialogueNPC/Area2D" to="DialogueNPC/Area2D" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="DialogueNPC/Area2D" to="DialogueNPC/Area2D" method="_on_area_exited"]
